# mdtopdf

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: agent-usage.md  architecture.md
examples/: visual-test-cn.md  visual-test-en.md  visual-test.md
mdtopdf/: __init__.py  __main__.py  api.py  mdtopdf_cli.py
mdtopdf/core/: __init__.py  doctor.py  fonts.py  html.py  inline.py  katex.py  markdown.py  mermaid.py  obsidian.py  pdf.py
mdtopdf/skills/: SKILL.md
mdtopdf/themes/: default.css
tests/: test_core.py  test_full_e2e.py
